# FastPathAudioEcho

./: README.md  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/weixiao/androidecho/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/java/com/weixiao/androidecho/: MainActivity.kt
app/src/main/res/values/: themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/weixiao/androidecho/: ExampleUnitTest.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
